--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">CrimeLoggerAndroid</string>
+    <string name="app_name">Crime Reporter</string>
+    <string name="sub_title">Make the world a better place</string>
     <string name="action_settings">Settings</string>
     <string name="action_login">Login</string>
     <string name="action_logout">Logout</string>
